<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/stream_ui_white_snow"
    tools:ignore="MissingConstraints"
    >

    <ImageView
        android:id="@+id/streamLogoImageView"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_stream_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/user_login_screen_title"
        android:textColor="@color/stream_ui_text_color_primary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/streamLogoImageView"
        />

    <TextView
        android:id="@+id/summaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/user_login_screen_subtitle"
        android:textColor="@color/stream_ui_text_color_primary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        />

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="@dimen/stream_ui_divider_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/stream_ui_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summaryTextView"
        />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/inputFieldsFlow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginBottom="60dp"
        app:constraint_referenced_ids="errorTitle, userNameInputLayout, passwordInputLayout"
        app:flow_lastVerticalStyle="packed"
        app:flow_maxElementsWrap="1"
        app:flow_verticalGap="8dp"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        app:layout_constraintVertical_bias="0"
        />

    <TextView
        android:id="@+id/errorTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/shape_error_view"
        android:paddingTop="@dimen/spacing_small"
        android:paddingBottom="@dimen/spacing_small"
        android:textColor="@color/black"
        tools:text="This is where the error message shown."
        android:gravity="center"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameInputLayout"
        style="@style/LoginEditTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_login_username"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            style="@style/LoginEditText"
            tools:ignore="RtlHardcoded"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/LoginEditTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_login_password"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            style="@style/LoginEditText"
            tools:ignore="RtlHardcoded"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="@dimen/spacing_medium"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        app:layout_constraintBottom_toTopOf="@id/forgotTextView"
        android:text="@string/user_login_register"
        android:textColor="@color/stream_color_primary"/>

    <TextView
        android:id="@+id/forgotTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:layout_constraintTop_toBottomOf="@id/registerTextView"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        android:text="@string/user_login_forgot_password"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:backgroundTint="@color/stream_ui_button_background_color"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/custom_login_button_text"
        android:textAllCaps="false"
        android:textColor="@color/stream_ui_button_text_color"
        android:textSize="16sp"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/splash"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>