<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingConstraints"
    >

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginHorizontal="@dimen/spacing_small"
        app:ccp_showFlag="false"
        app:ccp_showNameCode="false"
        app:ccp_defaultPhoneCode="60"
        app:layout_constraintEnd_toStartOf="@id/phoneNumberInputLayout"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberInputLayout"
        style="@style/LoginEditTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_small"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/otpInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ccp"
        android:hint="@string/otp_enter_number_label"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberEditText"
            style="@style/LoginEditText"
            tools:ignore="RtlHardcoded"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otpInputLayout"
        style="@style/LoginEditTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/otp_enter_otp"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/getCodeButton"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberInputLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/otpEditText"
            style="@style/LoginEditText"
            tools:ignore="RtlHardcoded"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/getCodeButton"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginHorizontal="@dimen/spacing_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberInputLayout"
        app:layout_constraintStart_toEndOf="@id/otpInputLayout"
        android:text="@string/otp_get_code"
        android:gravity="center"
        app:cornerRadius="14dp"
        android:textSize="12sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>